--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -101,9 +101,16 @@ rules:
     - delete
     - get
 - apiGroups:
-    -  scheduling.k8s.io/v1
+    - scheduling.k8s.io
   resources:
     - priorityclasses
+  verbs:
+    - create
+    - get
+- apiGroups:
+    - autoscaling.k8s.io
+  resources:
+    - verticalpodautoscalers
   verbs:
     - create
     - get
