--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -101,12 +101,21 @@ rules:
     - delete
     - get
 - apiGroups:
-    -  scheduling.k8s.io/v1
+    - scheduling.k8s.io
   resources:
     - priorityclasses
   verbs:
-    - create
     - get
+    - delete
+    - create
+- apiGroups:
+    - autoscaling.k8s.io
+  resources:
+    - verticalpodautoscalers
+  verbs:
+    - get
+    - delete
+    - create
 - apiGroups:
     - ""
   resources:
