add config version annotation to Chart.yaml

--- a/helm/app-operator/Chart.yaml
+++ b/helm/app-operator/Chart.yaml
@@ -6,3 +6,4 @@ appVersion: [[ .AppVersion ]]
 version: [[ .Version ]]
 annotations:
   application.giantswarm.io/team: "batman"
+  config.giantswarm.io/version: 1.x.x
