adding event rbac

--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -67,6 +67,14 @@ rules:
     - delete
     - get
 - apiGroups:
+    - ""
+  resources:
+    - events
+  verbs:
+    - create
+    - patch
+    - update
+- apiGroups:
     - networking.k8s.io
   resources:
     - networkpolicies
