Update renovate to merge similar PRs (#771)
* update renovate

* update modules

* update go mod

* update go mod

--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,19 @@
 {
   "extends": [
     "config:base"
+  ],
+  "packageRules": [
+    {
+      "matchPackagePrefixes": ["github.com/giantswarm"],
+      "groupName": "giantswarm modules"
+    },
+    {
+      "matchPackagePrefixes": ["k8s.io", "sigs.k8s.io"],
+      "groupName": "k8s modules"
+    },
+    {
+      "matchPackagePatterns": ["^(?!.*k8s.io|github.com\/giantswarm).*"],
+      "groupName": "etc modules"
+    }
   ]
 }
