--- a/helm/app-operator/Chart.yaml
+++ b/helm/app-operator/Chart.yaml
@@ -6,4 +6,4 @@ appVersion: [[ .AppVersion ]]
 version: [[ .Version ]]
 annotations:
   application.giantswarm.io/team: "batman"
-  config.giantswarm.io/version: 1.x.x
+  config.giantswarm.io/version: migrate-app-operator
