--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,3 +83,55 @@ workflows:
             - go-build
             - push-app-operator-to-control-plane-app-catalog
 
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-app-operator-to-aws-app-collection
+          app_name: "app-operator"
+          app_collection_repo: "aws-app-collection"
+          requires:
+            - push-app-operator-to-aliyun
+            - push-app-operator-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-app-operator-to-azure-app-collection
+          app_name: "app-operator"
+          app_collection_repo: "azure-app-collection"
+          requires:
+            - push-app-operator-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-app-operator-to-kvm-app-collection
+          app_name: "app-operator"
+          app_collection_repo: "kvm-app-collection"
+          requires:
+            - push-app-operator-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
+              
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-app-operator-to-vmware-app-collection
+          app_name: "app-operator"
+          app_collection_repo: "vmware-app-collection"
+          requires:
+            - push-app-operator-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
