--- a/renovate.json
+++ b/renovate.json
@@ -9,7 +9,8 @@
     },
     {
       "matchPackagePatterns": ["^k8s.io", "^sigs.k8s.io"],
-      "groupName": "k8s modules"
+      "groupName": "k8s modules",
+      "allowedVersions": "<= 1.20.0"
     },
     {
       "excludePackagePatterns": [".*giantswarm.*" ,"^k8s.io", "^sigs.k8s.io"],
