More fixes and use config branch

--- a/helm/app-operator/Chart.yaml
+++ b/helm/app-operator/Chart.yaml
@@ -5,4 +5,4 @@ name: app-operator
 appVersion: [[ .AppVersion ]]
 version: [[ .Version ]]
 annotations:
-  config.giantswarm.io/version: 1.x.x
+  config.giantswarm.io/version: app-operator-webhook
