--- a/helm/app-operator/templates/ingress.yaml
+++ b/helm/app-operator/templates/ingress.yaml
@@ -22,6 +22,7 @@ spec:
       http:
         paths:
           - path: /status
+            pathType: Prefix
             backend:
               serviceName: {{ include "resource.default.name" . }}
               servicePort: {{ .Values.port }}
