--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@dev:apptestctl
+  architect: giantswarm/architect@dev:apptestctl2
 
 workflows:
   build:
