Fixes for watch ns and cluster ID flags

--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -8,8 +8,8 @@ port: 8000
 protocol: "TCP"
 
 app:
-  watchNamespace: "org-ross"
-  workloadClusterID: "ke8e3"
+  watchNamespace: ""
+  workloadClusterID: ""
 
 helm:
   http:
