Support watching app CRs in org namespace (#902)
* Watch app CRs in organization namespace

* Fixes for getting chart-operator app CR

* Update cluster ID

* Add app name annotation for chart CR watcher

* Fix chart name

* Fix status resource

* Fix tests

* Update label selector to exclude unique apps

* Use k8smetadata for app-name annotation

* Fixes for watch ns and cluster ID flags

* Fix for getting chart-operator app CR

* Tidy up label package

* Replace formatChartName with key.ChartName

* Add changelog

* Use released libraries

--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -7,6 +7,10 @@ namespace: giantswarm
 port: 8000
 protocol: "TCP"
 
+app:
+  watchNamespace: ""
+  workloadClusterID: ""
+
 helm:
   http:
     clientTimeout: "5s"
