--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -102,7 +102,14 @@ rules:
     - create
     - delete
     - get
+- apiGroups:
+    - policy
+  resources:
+    - podsecuritypolicies
+  verbs:
     - use
+  resourceNames:
+    - {{ include  "resource.psp.name" . }}
 - apiGroups:
     - rbac.authorization.k8s.io
   resources:
