Push image to docker hub

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,19 @@ workflows:
               only: /^v.*/
 
       - architect/push-to-docker:
+          context: "architect"
+          name: push-app-operator-to-docker
+          image: "docker.io/giantswarm/app-operator"
+          username_envar: "DOCKER_USERNAME"
+          password_envar: "DOCKER_PASSWORD"
+          requires:
+            - go-build
+          # Needed to trigger job also on git tag.
+          filters:
+            tags:
+              only: /^v.*/
+
+      - architect/push-to-docker:
           context: architect
           name: push-app-operator-to-quay
           image: "quay.io/giantswarm/app-operator"
