Allow usage of chart-operator PSP for bootstrap

--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -110,6 +110,7 @@ rules:
     - use
   resourceNames:
     - {{ include  "resource.psp.name" . }}
+    - chart-operator-psp
 - apiGroups:
     - rbac.authorization.k8s.io
   resources:
