--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  architect: giantswarm/architect@dev:bump-apptestctl
+  architect: giantswarm/architect@4.14.1
 
 workflows:
   build:
