--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,9 +155,9 @@ workflows:
               
       - architect/push-to-app-collection:
           context: architect
-          name: push-app-operator-to-vmware-app-collection
+          name: push-app-operator-to-vsphere-app-collection
           app_name: "app-operator"
-          app_collection_repo: "vmware-app-collection"
+          app_collection_repo: "vsphere-app-collection"
           requires:
             - push-app-operator-to-control-plane-app-catalog
           filters:
