--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -1,31 +1,19 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ include "resource.default.name" . }}
+  name: {{ include "resource.default.name" . }}-{{ .Release.Namespace }}
   labels:
     {{- include "labels.common" . | nindent 4 }}
 rules:
-- apiGroups:
-    - apiextensions.k8s.io
-  resources:
-    - customresourcedefinitions
-  verbs:
-    - "*"
-- apiGroups:
-    - apiextensions.k8s.io
-  resources:
-    - customresourcedefinitions/status
-  verbs:
-    - "*"
 - apiGroups:
     - application.giantswarm.io
   resources:
     - apps
   verbs:
     - get
-    - update
     - list
     - patch
+    - update
     - watch
 - apiGroups:
     - application.giantswarm.io
@@ -71,120 +59,12 @@ rules:
   verbs:
     - "*"
 - apiGroups:
-    - batch
-  resources:
-    - jobs
-  verbs:
-    - create
-    - delete
-    - get
-- apiGroups:
-    - ""
-  resources:
-    - events
-  verbs:
-    - create
-    - patch
-    - update
-- apiGroups:
-    - networking.k8s.io
-  resources:
-    - networkpolicies
-  verbs:
-    - create
-    - delete
-    - get
-- apiGroups:
-    - policy
-  resources:
-    - podsecuritypolicies
-  verbs:
-    - create
-    - delete
-    - get
-- apiGroups:
-    - policy
-  resources:
-    - podsecuritypolicies
-  verbs:
-    - use
-  resourceNames:
-    - {{ include  "resource.psp.name" . }}
-    - chart-operator-psp
-- apiGroups:
-    - rbac.authorization.k8s.io
-  resources:
-    - clusterrolebindings
-  verbs:
-    - create
-    - delete
-    - get
-- apiGroups:
-    - rbac.authorization.k8s.io
-  resources:
-    - clusterroles
-  verbs:
-    - bind
-    - create
-    - delete
-    - get
-- apiGroups:
-    - scheduling.k8s.io
-  resources:
-    - priorityclasses
-  verbs:
-    - get
-    - delete
-    - create
-- apiGroups:
-    - autoscaling.k8s.io
-  resources:
-    - verticalpodautoscalers
-  verbs:
-    - get
-    - delete
-    - create
-- apiGroups:
-    - ""
-  resources:
-    - services
-    - serviceaccounts
-  verbs:
-    - get
-    - delete
-    - create
-- apiGroups:
-    - apps
-  resources:
-    - deployments
-  verbs:
-    - "*"
-- apiGroups:
     - ""
   resources:
     - configmaps
-    - secrets
   verbs:
-    - "*"
-- apiGroups:
-    - ""
-  resources:
-    - pods
-  verbs:
-    - get
     - list
-- apiGroups:
-    - ""
-  resources:
-    - pods/portforward
-  verbs:
-    - create
-- apiGroups:
-    - ""
-  resources:
-    - namespaces
-  verbs:
-    - get
+    - watch
 - nonResourceURLs:
   - "/"
   - "/healthz"
