--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -94,7 +94,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ include "resource.default.name" . }}
+  name: {{ include "resource.default.name" . }}-catalog
   namespace: giantswarm
   labels:
     {{- include "labels.common" . | nindent 4 }}
@@ -196,7 +196,7 @@ subjects:
     namespace: {{ include "resource.default.namespace" . }}
 roleRef:
   kind: Role
-  name: {{ include "resource.default.name" . }}
+  name: {{ include "resource.default.name" . }}-catalog
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
