add extra privilege for app-operator in giantswarm
app-operator running in giantswarm namespace needs to be able to
reconcile ConfigMaps and Secrets in cluster namespaces to install
app-operator-<cluster_id>.

--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -65,6 +65,21 @@ rules:
   verbs:
     - list
     - watch
+{{- if eq .Release.Namespace "giantswarm" }}
+- apiGroups:
+    - ""
+  resources:
+    - namespaces
+  verbs:
+    - get
+- apiGroups:
+    - ""
+  resources:
+    - configmaps
+    - secrets
+  verbs:
+    - "*"
+{{- end }}
 - nonResourceURLs:
   - "/"
   - "/healthz"
