--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -6,26 +6,14 @@ metadata:
     {{- include "labels.common" . | nindent 4 }}
 rules:
 - apiGroups:
-    - apiextensions.k8s.io
-  resources:
-    - customresourcedefinitions
-  verbs:
-    - "*"
-- apiGroups:
-    - apiextensions.k8s.io
-  resources:
-    - customresourcedefinitions/status
-  verbs:
-    - "*"
-- apiGroups:
     - application.giantswarm.io
   resources:
     - apps
   verbs:
     - get
-    - update
     - list
     - patch
+    - update
     - watch
 - apiGroups:
     - application.giantswarm.io
@@ -71,94 +59,19 @@ rules:
   verbs:
     - "*"
 - apiGroups:
-    - batch
+    - ""
   resources:
-    - jobs
+    - configmaps
   verbs:
-    - create
-    - delete
-    - get
+    - list
+    - watch
+{{- if eq .Release.Namespace "giantswarm" }}
 - apiGroups:
     - ""
   resources:
-    - events
-  verbs:
-    - create
-    - patch
-    - update
-- apiGroups:
-    - networking.k8s.io
-  resources:
-    - networkpolicies
-  verbs:
-    - create
-    - delete
-    - get
-- apiGroups:
-    - policy
-  resources:
-    - podsecuritypolicies
-  verbs:
-    - create
-    - delete
-    - get
-- apiGroups:
-    - policy
-  resources:
-    - podsecuritypolicies
-  verbs:
-    - use
-  resourceNames:
-    - {{ include  "resource.psp.name" . }}
-    - chart-operator-psp
-- apiGroups:
-    - rbac.authorization.k8s.io
-  resources:
-    - clusterrolebindings
-  verbs:
-    - create
-    - delete
-    - get
-- apiGroups:
-    - rbac.authorization.k8s.io
-  resources:
-    - clusterroles
-  verbs:
-    - bind
-    - create
-    - delete
-    - get
-- apiGroups:
-    - scheduling.k8s.io
-  resources:
-    - priorityclasses
+    - namespaces
   verbs:
     - get
-    - delete
-    - create
-- apiGroups:
-    - autoscaling.k8s.io
-  resources:
-    - verticalpodautoscalers
-  verbs:
-    - get
-    - delete
-    - create
-- apiGroups:
-    - ""
-  resources:
-    - services
-    - serviceaccounts
-  verbs:
-    - get
-    - delete
-    - create
-- apiGroups:
-    - apps
-  resources:
-    - deployments
-  verbs:
-    - "*"
 - apiGroups:
     - ""
   resources:
@@ -166,25 +79,7 @@ rules:
     - secrets
   verbs:
     - "*"
-- apiGroups:
-    - ""
-  resources:
-    - pods
-  verbs:
-    - get
-    - list
-- apiGroups:
-    - ""
-  resources:
-    - pods/portforward
-  verbs:
-    - create
-- apiGroups:
-    - ""
-  resources:
-    - namespaces
-  verbs:
-    - get
+{{- end }}
 - nonResourceURLs:
   - "/"
   - "/healthz"
@@ -210,6 +105,52 @@ rules:
       - charts
     verbs:
       - "*"
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: {{ include "resource.default.name" . }}-catalog
+  namespace: giantswarm
+  labels:
+    {{- include "labels.common" . | nindent 4 }}
+rules:
+- apiGroups:
+    - ""
+  resources:
+    - configmaps
+  verbs:
+    - get
+    - patch
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: {{ include "resource.default.name" . }}
+  namespace: {{ include "resource.default.namespace" . }}
+  labels:
+    {{- include "labels.common" . | nindent 4 }}
+rules:
+- apiGroups:
+    - ""
+  resources:
+    - namespaces
+  verbs:
+    - get
+- apiGroups:
+    - ""
+  resources:
+    - configmaps
+    - secrets
+  verbs:
+    - "*"
+- apiGroups:
+    - ""
+  resources:
+    - events
+  verbs:
+    - create
+    - patch
+    - update
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -239,6 +180,38 @@ subjects:
 roleRef:
   kind: ClusterRole
   name: {{ include "resource.chart.name" . }}
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: {{ include "resource.default.name" . }}
+  namespace: {{ include "resource.default.namespace" . }}
+  labels:
+    {{- include "labels.common" . | nindent 4 }}
+subjects:
+  - kind: ServiceAccount
+    name: {{ include "resource.default.name" . }}
+    namespace: {{ include "resource.default.namespace" . }}
+roleRef:
+  kind: Role
+  name: {{ include "resource.default.name" . }}
+  apiGroup: rbac.authorization.k8s.io
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: {{ include "resource.default.name" . }}-catalog
+  namespace: giantswarm
+  labels:
+    {{- include "labels.common" . | nindent 4 }}
+subjects:
+  - kind: ServiceAccount
+    name: {{ include "resource.default.name" . }}
+    namespace: {{ include "resource.default.namespace" . }}
+roleRef:
+  kind: Role
+  name: {{ include "resource.default.name" . }}-catalog
   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: rbac.authorization.k8s.io/v1
