--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -86,6 +86,7 @@ rules:
   verbs:
     - get
 ---
+{{- if eq .Release.Namespace "giantswarm" }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -105,6 +106,7 @@ rules:
       - charts
     verbs:
       - "*"
+{{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -167,6 +169,7 @@ roleRef:
   name: {{ include "resource.default.name" . }}
   apiGroup: rbac.authorization.k8s.io
 ---
+{{- if eq .Release.Namespace "giantswarm" }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
@@ -181,6 +184,7 @@ roleRef:
   kind: ClusterRole
   name: {{ include "resource.chart.name" . }}
   apiGroup: rbac.authorization.k8s.io
+{{- end }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
