--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -146,6 +146,12 @@ rules:
   verbs:
     - "*"
 - apiGroups:
+    - apps
+  resources:
+    - deployments
+  verbs:
+    - "*"
+- apiGroups:
     - ""
   resources:
     - events
