Revert "Change VPA settings"
This reverts commit 38cf59dfcf765b3d127e8e1f72043035971c58d6.

--- a/helm/app-operator/templates/vpa.yaml
+++ b/helm/app-operator/templates/vpa.yaml
@@ -10,16 +10,7 @@ spec:
   resourcePolicy:
     containerPolicies:
     - containerName: {{ include "name" . }}
-      controlledResources:
-        - cpu
-        - memory
-      maxAllowed:
-        cpu: 1
-        memory: 1000Mi
-      minAllowed:
-        cpu: 250m
-        memory: 250Mi
-#      controlledValues: RequestsAndLimits
+      controlledValues: RequestsAndLimits
       mode: Auto
   targetRef:
     apiVersion: apps/v1
