--- a/helm/app-operator/templates/vpa.yaml
+++ b/helm/app-operator/templates/vpa.yaml
@@ -1,4 +1,4 @@
-{{ if and (.Capabilities.APIVersions.Has "autoscaling.k8s.io/v1") (.Values.verticalPodAutoscaler.enabled) }}
+{{- if eq (include "resource.vpa.enabled" .) "true" -}}
 apiVersion: autoscaling.k8s.io/v1
 kind: VerticalPodAutoscaler
 metadata:
@@ -14,8 +14,8 @@ spec:
         - cpu
         - memory
       maxAllowed:
-        cpu: 1
-        memory: 1000Mi
+        cpu: 1000m
+        memory: 1000qMi
       minAllowed:
         cpu: 250m
         memory: 250Mi
