--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -42,10 +42,16 @@ deployment:
     requests:
       cpu: 250m
       memory: 250Mi
+    limits:
+      cpu: 350m
+      memory: 500Mi
   workload:
     requests:
       cpu: 100m
       memory: 50Mi
+    limits:
+      cpu: 150m
+      memory: 100Mi
 
 verticalPodAutoscaler:
   enabled: true
