Update deployment resource generation to take VPA into account

--- a/helm/app-operator/templates/deployment.yaml
+++ b/helm/app-operator/templates/deployment.yaml
@@ -62,4 +62,4 @@ spec:
           initialDelaySeconds: 15
           timeoutSeconds: 1
         resources:
-{{ include "resource.deployment.resources" . | indent 10 }}
+{{- include "resource.deployment.resources" . | indent 10 }}
