--- a/helm/app-operator/templates/vpa.yaml
+++ b/helm/app-operator/templates/vpa.yaml
@@ -1,4 +1,4 @@
-{{- if eq (include "resource.vpa.enabled" .) "true" -}}
+{{ if and (.Capabilities.APIVersions.Has "autoscaling.k8s.io/v1") (.Values.verticalPodAutoscaler.enabled) }}
 apiVersion: autoscaling.k8s.io/v1
 kind: VerticalPodAutoscaler
 metadata:
@@ -15,7 +15,7 @@ spec:
         - memory
       maxAllowed:
         cpu: 1000m
-        memory: 1000qMi
+        memory: 1000Mi
       minAllowed:
         cpu: 250m
         memory: 250Mi
