--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -43,13 +43,15 @@ deployment:
       cpu: 250m
       memory: 250Mi
     limits:
-      memory: 280Mi
+      cpu: 350m
+      memory: 500Mi
   workload:
     requests:
       cpu: 100m
       memory: 50Mi
     limits:
-      memory: 50Mi
+      cpu: 150m
+      memory: 100Mi
 
 verticalPodAutoscaler:
   enabled: true
