Add app label to prometheus metrics collected via the pod monitor

--- a/helm/app-operator/templates/pod-monitor.yaml
+++ b/helm/app-operator/templates/pod-monitor.yaml
@@ -14,3 +14,7 @@ spec:
       {{- include "labels.selector" . | nindent 6 }}
   podMetricsEndpoints:
     - targetPort: {{ .Values.port }}
+      relabelings:
+        - replacement: {{ include "name" . }}
+          targetLabel: app
+
