Add `initialBootstrapMode` flag to allow deploying CNI as managed apps.

--- a/helm/app-operator/templates/psp.yaml
+++ b/helm/app-operator/templates/psp.yaml
@@ -24,7 +24,15 @@ spec:
     rule: RunAsAny
   volumes:
     - 'configMap'
+    - 'projected'
   allowPrivilegeEscalation: false
+  {{- if .Values.initialBootstrapMode }}
+  hostNetwork: true
+  hostPorts:
+  - min: {{ .Values.port }}
+    max: {{ .Values.port }}
+  {{- else }}
   hostNetwork: false
+  {{- end }}
   hostIPC: false
   hostPID: false
