--- a/helm/app-operator/templates/deployment.yaml
+++ b/helm/app-operator/templates/deployment.yaml
@@ -28,6 +28,14 @@ spec:
           - key: config.yaml
             path: config.yaml
       serviceAccountName: {{ include "resource.default.name"  . }}
+      {{- if .Values.initialBootstrapMode }}
+      hostNetwork: true
+      tolerations:
+      - effect: NoSchedule
+        operator: Exists
+      nodeSelector:
+        node-role.kubernetes.io/master: ""
+      {{- end }}
       securityContext:
         runAsUser: {{ .Values.userID }}
         runAsGroup: {{ .Values.groupID }}
@@ -49,6 +57,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        {{- if .Values.initialBootstrapMode }}
+        - name: KUBERNETES_SERVICE_HOST
+          value: 127.0.0.1
+        {{- end }}
         livenessProbe:
           httpGet:
             path: /healthz
