Add support for barebone clusters (#1001)
* Add `initialBootstrapMode` flag to allow deploying CNI as managed apps.

* Add `initialBootstrapMode` flag to allow deploying CNI as managed apps.

* Add `initialBootstrapMode` flag to allow deploying CNI as managed apps.

* Add `initialBootstrapMode` flag to allow deploying CNI as managed apps.

--- a/helm/app-operator/templates/psp.yaml
+++ b/helm/app-operator/templates/psp.yaml
@@ -24,7 +24,8 @@ spec:
     rule: RunAsAny
   volumes:
     - 'configMap'
+    - 'projected'
   allowPrivilegeEscalation: false
-  hostNetwork: false
+  hostNetwork: {{ .Values.initialBootstrapMode }}
   hostIPC: false
   hostPID: false
