--- a/helm/app-operator/templates/deployment.yaml
+++ b/helm/app-operator/templates/deployment.yaml
@@ -28,6 +28,14 @@ spec:
           - key: config.yaml
             path: config.yaml
       serviceAccountName: {{ include "resource.default.name"  . }}
+      {{- if .Values.initialBootstrapMode }}
+      hostNetwork: true
+      tolerations:
+      - effect: NoSchedule
+        operator: Exists
+      nodeSelector:
+        node-role.kubernetes.io/master: ""
+      {{- end }}
       securityContext:
         runAsUser: {{ .Values.userID }}
         runAsGroup: {{ .Values.groupID }}
@@ -37,9 +45,16 @@ spec:
         volumeMounts:
         - name: {{ include "name" . }}-configmap
           mountPath: /var/run/{{ include "name" . }}/configmap/
+        {{- if not .Values.initialBootstrapMode }}
+        # When initialBootstrapMode is true, this pod runs in `hostNetwork` mode.
+        # This means kubernetes automatically adds an hostPort field in the `ports` section below.
+        # When initialBootstrapMode is set back to false, the hostPort field is not removed and that makes the replicaset to fail.
+        # By removing the whole `ports` section when `initialBootstrapMode` is true we allow switching between the two modes
+        # without any manual intervention required.
         ports:
         - name: http
           containerPort: {{ .Values.port }}
+        {{- end }}
         args:
         - daemon
         - --config.dirs=/var/run/{{ include "name" . }}/configmap/
@@ -49,6 +64,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        {{- if .Values.initialBootstrapMode }}
+        - name: KUBERNETES_SERVICE_HOST
+          value: 127.0.0.1
+        {{- end }}
         livenessProbe:
           httpGet:
             path: /healthz
