--- a/helm/app-operator/templates/pod-monitor.yaml
+++ b/helm/app-operator/templates/pod-monitor.yaml
@@ -1,4 +1,4 @@
-{{- if not .Values.initialBootstrapMode }}
+{{- if not .Values.initialBootstrapMode.enabled }}
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
