--- a/helm/app-operator/templates/deployment.yaml
+++ b/helm/app-operator/templates/deployment.yaml
@@ -66,7 +66,9 @@ spec:
               fieldPath: metadata.namespace
         {{- if .Values.initialBootstrapMode.enabled }}
         - name: KUBERNETES_SERVICE_HOST
-          value: 127.0.0.1
+          valueFrom:
+            fieldRef:
+              fieldPath: status.hostIP
         - name: KUBERNETES_SERVICE_PORT
           value: {{ .Values.initialBootstrapMode.apiServerPodPort | quote }}
         {{- end }}
