Allow to mount secret volumes in PSP

--- a/helm/app-operator/templates/psp.yaml
+++ b/helm/app-operator/templates/psp.yaml
@@ -25,6 +25,7 @@ spec:
   volumes:
     - 'configMap'
     - 'projected'
+    - 'secret'
   allowPrivilegeEscalation: false
   hostNetwork: {{ .Values.initialBootstrapMode.enabled }}
   hostIPC: false
