Allow to set api server pod port when enabling initialBootstrapMode (#1018)
* Allow to set api server pod port when enabling initialBootstrapMode

* Use 'hostIP' as kubernetes service host

* Allow to mount secret volumes in PSP

--- a/helm/app-operator/templates/psp.yaml
+++ b/helm/app-operator/templates/psp.yaml
@@ -25,7 +25,8 @@ spec:
   volumes:
     - 'configMap'
     - 'projected'
+    - 'secret'
   allowPrivilegeEscalation: false
-  hostNetwork: {{ .Values.initialBootstrapMode }}
+  hostNetwork: {{ .Values.initialBootstrapMode.enabled }}
   hostIPC: false
   hostPID: false
