Change 'initialBootstrapMode' config name to 'bootstrapMode'

--- a/helm/app-operator/templates/psp.yaml
+++ b/helm/app-operator/templates/psp.yaml
@@ -27,6 +27,6 @@ spec:
     - 'projected'
     - 'secret'
   allowPrivilegeEscalation: false
-  hostNetwork: {{ .Values.initialBootstrapMode.enabled }}
+  hostNetwork: {{ .Values.bootstrapMode.enabled }}
   hostIPC: false
   hostPID: false
