--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -68,3 +68,21 @@ verticalPodAutoscaler:
 initialBootstrapMode:
   apiServerPodPort: 443
   enabled: false
+
+# Pod securityContext
+podSecurityContext:
+  runAsNonRoot: true
+  seccompProfile:
+    type: RuntimeDefault
+
+# Container securityContext
+securityContext:
+  allowPrivilegeEscalation: false
+  capabilities:
+    drop:
+    - ALL
+  privileged: false
+  runAsNonRoot: true
+  seccompProfile:
+    type: RuntimeDefault
+
