push to capa-app-collection (#1038)
* push to capa app collection

* remove trailing newline

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,3 +179,16 @@ workflows:
               ignore: /.*/
             tags:
               only: /^v.*/
+
+      - architect/push-to-app-collection:
+          context: architect
+          name: push-to-capa-app-collection
+          app_name: "app-operator"
+          app_collection_repo: "capa-app-collection"
+          requires:
+            - push-app-operator-to-control-plane-app-catalog
+          filters:
+            branches:
+              ignore: /.*/
+            tags:
+              only: /^v.*/
