--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -45,3 +45,5 @@ CVE-2018-1714 until=2022-08-30
 # imported from:
 #  - github.com/giantswarm/helmclient/v4
 sonatype-2022-0204 until=2022-08-30
+
+sonatype-2021-0276 until=2022-08-30
