--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -1,6 +1,7 @@
 # pkg:golang/github.com/hashicorp/consul/api@v1.12.0
 CVE-2022-29153 until=2022-12-31
 CVE-2022-24687 until=2022-12-31
+CVE-2021-41803 until=2022-12-31
 
 # pkg:golang/github.com/hashicorp/consul/sdk@v0.8.0
 CVE-2022-29153 until=2022-12-31
