--- a/.nancy-ignore
+++ b/.nancy-ignore
@@ -58,3 +58,5 @@ sonatype-2022-5436 until=2023-06-30
 
 # pkg:golang/golang.org/x/text@v0.3.7
 CVE-2022-32149 until=2023-06-30
+
+CVE-2022-41723 until=2023-06-30
