Compose base for adjusting resource usage

--- a/helm/app-operator/templates/vpa.yaml
+++ b/helm/app-operator/templates/vpa.yaml
@@ -13,12 +13,21 @@ spec:
       controlledResources:
         - cpu
         - memory
-      maxAllowed:
-        cpu: 1000m
-        memory: 1000Mi
+      {{- if eq (include "resource.app.unique" .) "true" }}
       minAllowed:
-        cpu: 250m
-        memory: 250Mi
+        cpu: {{ .Values.deployment.management.requests.cpu }}
+        memory: {{ .Values.deployment.management.requests.memory }}
+      maxAllowed:
+        cpu: {{ .Values.deployment.management.limits.cpu }}
+        memory: {{ .Values.deployment.management.limits.memory }}
+      {{- else }}}
+      minAllowed:
+        cpu: {{ .Values.deployment.workload.requests.cpu }}
+        memory: {{ .Values.deployment.workload.requests.memory }}
+      maxAllowed:
+        cpu: {{ .Values.deployment.workload.limits.cpu }}
+        memory: {{ .Values.deployment.workload.limits.memory }}
+      {{- end }}}
       mode: Auto
   targetRef:
     apiVersion: apps/v1
