add a switch for PSP CR installation

--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -93,3 +93,6 @@ serviceMonitor:
   interval: "60s"
   # -- (duration) Prometheus scrape timeout.
   scrapeTimeout: "45s"
+
+podSecurityStandards:
+  enforced: false
