--- a/helm/app-operator/templates/psp.yaml
+++ b/helm/app-operator/templates/psp.yaml
@@ -1,3 +1,4 @@
+{{- if not .Values.podSecurityStandards.enforced }}
 {{- if .Capabilities.APIVersions.Has "policy/v1beta1" }}
 apiVersion: policy/v1beta1
 kind: PodSecurityPolicy
@@ -33,4 +34,5 @@ spec:
   hostNetwork: {{ .Values.bootstrapMode.enabled }}
   hostIPC: false
   hostPID: false
+{{- end }}
 {{- end }}
