Move pss values under the global property

--- a/helm/app-operator/values.yaml
+++ b/helm/app-operator/values.yaml
@@ -97,8 +97,9 @@ serviceMonitor:
   # -- (duration) Prometheus scrape timeout.
   scrapeTimeout: "45s"
 
-podSecurityStandards:
-  enforced: false
+global:
+  podSecurityStandards:
+    enforced: false
 
 kyvernoPolicyExceptions:
   enabled: true
