--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -224,7 +224,7 @@ roleRef:
   name: {{ include "resource.default.name" . }}-catalog
   apiGroup: rbac.authorization.k8s.io
 ---
-{{- if not .Values.podSecurityStandards.enforced }}
+{{- if not (((.Values.global).podSecurityStandards).enforced) }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
