Update ClusterRole to read HelmReleases

--- a/helm/app-operator/templates/rbac.yaml
+++ b/helm/app-operator/templates/rbac.yaml
@@ -59,6 +59,13 @@ rules:
   verbs:
     - "*"
 - apiGroups:
+    - helm.toolkit.fluxcd.io
+  resources:
+    - helmreleases
+  verbs:
+    - get
+    - list
+- apiGroups:
     - ""
   resources:
     - configmaps
